--- a/config/training_args/default.yaml
+++ b/config/training_args/default.yaml
@@ -8,6 +8,7 @@ gradient_accumulation_steps: 1
 learning_rate: 0.0001
 warmup_steps: 10
 weight_decay: 0.01
+optim: adamw_bnb_8bit
 adam_beta1: 0.9
 adam_beta2: 0.98
 adam_epsilon: 1e-6
