--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ bitsandbytes==0.41.1
 datasets==2.14.5
 hydra-core==1.3.2
 lovely-tensors==0.1.15
+mpi4py==3.1.5
 pandas==2.1.1
 tokenizers==0.14.1
 torch==2.1.0
