--- a/requirements.txt
+++ b/requirements.txt
@@ -2,13 +2,16 @@ accelerate==0.23.0
 albumentations==1.3.1
 bitsandbytes==0.41.1
 datasets==2.14.5
+deepspeed==0.11.1
 hydra-core==1.3.2
 lovely-tensors==0.1.15
 mpi4py==3.1.5
 pandas==2.1.1
+timm==0.9.7
 tokenizers==0.14.1
 torch==2.1.0
 torchvision==0.16.0
 tqdm==4.66.1
 transformers==4.34.0
 wandb==0.15.12
+webdataset==0.2.59
