--- a/config/train.yaml
+++ b/config/train.yaml
@@ -1,6 +1,6 @@
 defaults:
   - training_args: default
-  - dataset: paired_xrays
+  - dataset: wds_paired_xrays
   - vision_model: biomed_seqvit
   - text_model: dr_bert
   - vlp_model: pooled_vlp
