--- a/config/train.yaml
+++ b/config/train.yaml
@@ -1,5 +1,5 @@
 defaults:
-  - training_args: default
+  - training_args: lion8bit
   - dataset: wds_paired_xrays
   - vision_model: biomed_seqvit
   - text_model: dr_bert
