--- a/config/trainer/default.yaml
+++ b/config/trainer/default.yaml
@@ -1,8 +1,7 @@
 _target_: pytorch_lightning.Trainer
 accelerator: gpu
 precision: 16-mixed
-max_steps: 200000
-val_check_interval: 5000
+max_epochs: 50
 callbacks:
   - _target_: pytorch_lightning.callbacks.ModelCheckpoint
     monitor: val/loss
