--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,8 @@ hydra-core==1.3.2
 lovely-tensors==0.1.15
 mpi4py==3.1.5
 pandas==2.1.1
+pytorch-lightning==2.1.2
+sentencepiece==0.1.99
 timm==0.9.7
 tokenizers==0.14.1
 torch==2.1.0
