--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ albumentations==1.3.1
 bitsandbytes==0.41.1
 datasets==2.14.5
 deepspeed==0.11.1
+einops==0.7.0
 hydra-core==1.3.2
 lovely-tensors==0.1.15
 mpi4py==3.1.5
